--- a/hgeometry.cabal
+++ b/hgeometry.cabal
@@ -248,7 +248,8 @@ library
               , fingertree       >= 0.1
               , colour           >= 2.3.3
               , reflection       >= 2.1
-
+              , tagged           >= 0.8
+              , multiset         >= 0.3.4
 
               -- , validation       >= 0.4
 
